--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,50 @@
 .read-the-docs {
   color: #888;
 } */
+
+*{
+  margin: 0;
+  box-sizing: border-box;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+}
+
+.side {
+  margin: auto 30px;
+}
+
+.profile{
+  display: block;
+}
+
+.profile-img{
+  border-radius: 50%;
+  height: 320px;
+  width: 320px;
+}
+
+.profile h2 {
+  font-size: 24px;
+  line-height: 1.25;
+  font-weight: var(--base-text-weight-semibold, 600);
+}
+
+.profile h3{
+  color: #656D76;
+  font-size: 20px;
+  font-style: normal;
+  line-height: 24px;
+  font-weight: var(--base-text-weight-light, 300);
+}
+
+.repo h1 {
+  color: #0969DA;
+}
+
+.repo p {
+  color: #656D76;
+}
