--- a/src/App.css
+++ b/src/App.css
@@ -47,13 +47,23 @@
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
 }
 
+/* Profile.tsx */
 .grid {
   display: grid;
   grid-template-columns: 1fr 3fr;
 }
 
+.repo h1 {
+  color: #0969DA;
+}
+
+.repo p {
+  color: #656D76;
+}
+
+/* SideProfile.tsx */
 .side {
-  margin: auto 30px;
+  margin: 0 30px auto 30px;
 }
 
 .profile{
@@ -78,12 +88,4 @@
   font-style: normal;
   line-height: 24px;
   font-weight: var(--base-text-weight-light, 300);
-}
-
-.repo h1 {
-  color: #0969DA;
-}
-
-.repo p {
-  color: #656D76;
 }
