--- a/src/App.css
+++ b/src/App.css
@@ -41,16 +41,41 @@
   color: #888;
 } */
 
+/* all files */
 *{
   margin: 0;
   box-sizing: border-box;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
 }
 
+input {
+  padding: 5px 12px;
+  font-size: 14px;
+  line-height: 20px;
+  vertical-align: middle;
+  border: 1px solid #656D76;
+  border-radius: 6px;
+  width: 75%;
+}
+
+/* Home.tsx */
+.home-file {
+  margin: 20px;
+}
+
+.listed-user {
+  margin-top: 10px;
+}
+
+.listed-user :hover {
+  cursor: pointer;
+}
+
 /* Profile.tsx */
 .grid {
   display: grid;
   grid-template-columns: 1fr 3fr;
+  margin-top: 30px;
 }
 
 .repo h1 {
@@ -61,9 +86,13 @@
   color: #656D76;
 }
 
+.main {
+  margin: 0 30px auto 15px;
+}
+
 /* SideProfile.tsx */
-.side {
-  margin: 0 30px auto 30px;
+.sideprofile-file {
+  margin: 0 15px auto 30px;
 }
 
 .profile{
@@ -72,8 +101,8 @@
 
 .profile-img{
   border-radius: 50%;
-  height: 320px;
-  width: 320px;
+  max-height: 320px;
+  max-width: 320px;
 }
 
 .profile h2 {
