--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,3 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
-
 /* all files */
 *{
   margin: 0;
@@ -78,16 +35,41 @@ input {
   margin-top: 30px;
 }
 
+.main {
+  margin: 0 30px auto 15px;
+}
+
+/* Repository.tsx */
+.repo {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #656D76;
+}
+
 .repo h1 {
   color: #0969DA;
+  font-weight: var(--base-text-weight-semibold, 600);
+  font-size: 26px;
 }
 
 .repo p {
   color: #656D76;
 }
 
-.main {
-  margin: 0 30px auto 15px;
+.repo-main p {
+  padding-top: 5px;
+  font-size: 17px;
+}
+
+.repo-extra {
+  display: flex;
+  justify-content: left;
+  padding-top: 20px;
+}
+
+.repo-extra p {
+  margin-right: 25px;
+  font-size: 15px;
 }
 
 /* SideProfile.tsx */
@@ -117,4 +99,16 @@ input {
   font-style: normal;
   line-height: 24px;
   font-weight: var(--base-text-weight-light, 300);
+}
+
+/* TopNav.tsx */
+#topnav-file {
+  background-color: #F6F8FA;
+  border-bottom: 1px solid #656D76;
+  padding: 20px 20px;
+}
+
+#topnav-file img {
+  height: 40px;
+  width: 40px;
 }
