--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,9 @@
   .listed-user {
     width: 520px;
   }
+  #home-file .listed-user {
+    grid-template-columns: 1fr 8fr;
+  }
 }
 
 @media screen and (min-width: 850px) {
@@ -22,6 +25,9 @@
   }
   .listed-user {
     width: 630px;
+  }
+  #home-file .listed-user {
+    grid-template-columns: 1fr 9fr;
   }
 }
 
@@ -33,6 +39,9 @@
   .listed-user {
     width: 740px;
   }
+  #home-file .listed-user {
+    grid-template-columns: 1fr 10fr;
+  }
 }
 
 @media screen and (min-width: 1070px){
@@ -42,6 +51,9 @@
   }
   .listed-user {
     width: 850px;
+  }
+  #home-file .listed-user {
+    grid-template-columns: 1fr 11fr;
   }
 }
 
@@ -53,6 +65,9 @@
   .listed-user {
     width: 960px;
   }
+  #home-file .listed-user {
+    grid-template-columns: 1fr 12fr;
+  }
 }
 
 @media screen and (min-width: 1290px){
@@ -63,6 +78,9 @@
   .listed-user {
     width: 1070px;
   }
+  #home-file .listed-user {
+    grid-template-columns: 1fr 13fr;
+  }
 }
 
 @media screen and (min-width: 1400px){
@@ -72,6 +90,9 @@
   }
   .listed-user {
     width: 1180px;
+  }
+  #home-file .listed-user {
+    grid-template-columns: 1fr 14fr;
   }
 }
 
@@ -138,7 +159,7 @@ input {
 #home-file .listed-user {
   margin: 40px auto;
   display: grid;
-  grid-template-columns: 1fr 8fr;
+  /* grid-template-columns: 1fr 8fr; */
   border: 1px solid #656D76;
   padding: 16px;
   border-radius: 6px;
@@ -233,6 +254,15 @@ input {
 .lang-list {
   visibility: hidden;
   display: block;
+}
+
+.clear-filter svg {
+  background-color: red;
+  fill: white;
+  padding: 1px;
+  margin-right: 4px;
+  text-align: center;
+  border-radius: 6px;
 }
 
 /* Repository.tsx */
@@ -374,9 +404,9 @@ input {
 
 .repos-nav a {
   margin-right: 30px;
-  font-size: 20px;
+  font-size: 18px;
   cursor: pointer;
-  padding: 5px 10px;
+  padding: 5px 10px 0 10px;
 }
 
 .repos-nav a:hover {
@@ -384,21 +414,31 @@ input {
   border-radius: 6px;
 }
 
-.repos-nav a::after { /* not working as wanted */
-  background: orange;
-  border-radius: var(--borderRadius-medium, 0.375rem);
-  /* bottom: calc(50% - 25px); */
-  top: 131px; /* not from elements */
+.clicked {
+  font-weight: 600;
+}
+
+.clicked::after {
   content: "";
-  height: 2px;
-  position: absolute;
-  right: 50%;
-  transform: translate(50%, -50%);
-  width: 100%;
+  display: block;
+  border-bottom: 3px solid orange;
+  padding-bottom: 20px;
+  margin-bottom: -20px;
+  margin-left: -10%;
+  width: 120%;
   z-index: 1;
 }
 
 .repos-nav svg {
   margin-right: 15px;
   filter: invert(42%) sepia(18%) saturate(232%) hue-rotate(171deg) brightness(94%) contrast(90%);
+}
+
+.repo-amount {
+  margin-left: 10px;
+  background-color: #e0e5e9;
+  border-radius: 2rem;
+  padding: 3px 10px;
+  font-size: medium;
+  font-weight: normal;
 }
