--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,24 @@
   }
   .listed-user {
     width: 520px;
-  }
-  #home-file .listed-user {
     grid-template-columns: 1fr 8fr;
+  }
+  .grid {
+    margin-top: 30px;
+    width: auto;
+    margin: 50px 20px;
+  }
+  .search-repo input {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .profile-img {
+    height: 150px;
+    width: 150px;
+  }
+  #sideprofile-file {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
   }
 }
 
@@ -25,9 +40,23 @@
   }
   .listed-user {
     width: 630px;
-  }
-  #home-file .listed-user {
     grid-template-columns: 1fr 9fr;
+  }
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    row-gap: auto;
+    margin-top: 30px;
+    width: 760px;
+    margin: 50px auto;
+  }
+  .profile-img {
+    height: 200px;
+    width: 200px;
+    margin-bottom: 20px;
+  }
+  #sideprofile-file {
+    display: block;
   }
 }
 
@@ -38,9 +67,19 @@
   }
   .listed-user {
     width: 740px;
-  }
-  #home-file .listed-user {
     grid-template-columns: 1fr 10fr;
+  }
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    row-gap: auto;
+    margin-top: 30px;
+    width: 840px;
+    margin: 50px auto;
+  }
+  .profile-img {
+    height: 250px;
+    width: 250px;
   }
 }
 
@@ -51,9 +90,19 @@
   }
   .listed-user {
     width: 850px;
-  }
-  #home-file .listed-user {
     grid-template-columns: 1fr 11fr;
+  }
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    row-gap: auto;
+    margin-top: 30px;
+    width: 920px;
+    margin: 50px auto;
+  }
+  .profile-img {
+    height: 300px;
+    width: 300px;
   }
 }
 
@@ -64,9 +113,19 @@
   }
   .listed-user {
     width: 960px;
-  }
-  #home-file .listed-user {
     grid-template-columns: 1fr 12fr;
+  }
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    row-gap: auto;
+    margin-top: 30px;
+    width: 950px;
+    margin: 50px auto;
+  }
+  .profile-img {
+    height: 350px;
+    width: 350px;
   }
 }
 
@@ -77,9 +136,15 @@
   }
   .listed-user {
     width: 1070px;
-  }
-  #home-file .listed-user {
     grid-template-columns: 1fr 13fr;
+  }
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    row-gap: auto;
+    margin-top: 30px;
+    width: 1060px;
+    margin: 50px auto;
   }
 }
 
@@ -90,9 +155,56 @@
   }
   .listed-user {
     width: 1180px;
-  }
-  #home-file .listed-user {
     grid-template-columns: 1fr 14fr;
+  }
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    row-gap: auto;
+    margin-top: 30px;
+    width: 1170px;
+    margin: 50px auto;
+  }
+}
+
+@media screen and (min-width: 1510px) {
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    row-gap: auto;
+    margin-top: 30px;
+    width: 1280px;
+    margin: 50px auto;
+  }
+  .search-repo {
+    display: flex;
+    justify-content: space-between;
+  }
+  .search-repo input {
+    width: 75%;
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 1620px) {
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    row-gap: auto;
+    margin-top: 30px;
+    width: 1390px;
+    margin: 50px auto;
+  }
+}
+
+@media screen and (min-width: 1730px) {
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    row-gap: auto;
+    margin-top: 30px;
+    width: 1500px;
+    margin: 50px auto;
   }
 }
 
@@ -103,14 +215,13 @@ input {
   vertical-align: middle;
   border: 1px solid #656D76;
   border-radius: 6px;
-  width: 75%;
+  /* width: 75%; */
 }
 
 .github-nav img, .home-header img, .listed-user img {
   height: 40px;
   width: 40px;
   float: left;
-  /* clear: both; */
   margin-right: 15px;
 }
 
@@ -122,6 +233,14 @@ input {
   padding-top: 9px;
   width: fit-content;
   cursor: pointer;
+}
+
+.comment {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #656D76;
+  padding-bottom: 25px;
+  padding-top: 25px;
 }
 
 /* Home.tsx */
@@ -205,15 +324,6 @@ input {
 }
 
 /* Profile.tsx */
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  row-gap: auto;
-  margin-top: 30px;
-  width: 1500px;
-  margin: 50px auto;
-}
-
 .main {
   margin: 0 30px auto 15px;
 }
@@ -221,9 +331,10 @@ input {
 .select-wrap {
   border: 1px solid #777;
   border-radius: 6px;
-  padding: 8px 8px 8px 15px;
-  width: 200px;
+  padding: 8px;
+  width: fit-content;
   background-color: #F6F8FA;
+  height: fit-content;
 }
 
 .select-wrap label{
@@ -238,9 +349,9 @@ input {
   font-weight: bold;
 }
 
-.search-part {
-  display: flex;
-  justify-content: space-between;
+.search-repo {
+  border-bottom: 1px solid #656D76;
+  padding-bottom: 25px;
 }
 
 .lang-btn {
@@ -257,12 +368,19 @@ input {
 }
 
 .clear-filter svg {
-  background-color: red;
+  background-color: #656D76;
   fill: white;
   padding: 1px;
   margin-right: 4px;
   text-align: center;
   border-radius: 6px;
+  margin-right: 10px;
+}
+
+.clear-filter {
+  display: flex;
+  color: #656D76;
+  cursor: pointer;
 }
 
 /* Repository.tsx */
@@ -276,13 +394,26 @@ input {
   color: #0969DA;
   font-weight: var(--base-text-weight-semibold, 600);
   font-size: 26px;
+  margin-bottom: 10px;
+  text-decoration: none;
 }
 
 #repository-file p {
   color: #656D76;
 }
 
-.repo-main p {
+.privacy {
+  margin-left: 20px;
+  padding: 2px 10px;
+  border: 1px solid #656D76;
+  border-radius: 2rem;
+  font-weight: 600;
+  font-size: 15px;
+  height: fit-content;
+  margin-top: 5px;
+}
+
+.repo-main .description p {
   padding-top: 5px;
   font-size: 17px;
 }
@@ -315,17 +446,9 @@ input {
   display: flex;
 }
 
-.privacy {
-  margin-left: 20px;
-  padding: 2px 15px;
-  border: 1px solid #656D76;
-  border-radius: 2rem;
-  font-weight: 100;
-}
-
 /* SideProfile.tsx */
-.sideprofile-file {
-  margin: 0 15px auto 30px;
+#sideprofile-file {
+  margin: 0 15px 30px 30px;
 }
 
 .profile {
@@ -334,22 +457,36 @@ input {
 
 .profile-img {
   border-radius: 50%;
-  max-height: 320px;
-  max-width: 320px;
 }
 
 .profile h2 {
-  font-size: 24px;
+  font-size: 28px;
   line-height: 1.25;
   font-weight: var(--base-text-weight-semibold, 600);
+  margin-bottom: 5px;
 }
 
 .profile h3{
   color: #656D76;
-  font-size: 20px;
+  font-size: 24px;
   font-style: normal;
   line-height: 24px;
   font-weight: var(--base-text-weight-light, 300);
+}
+
+.bio {
+  font-size: 20px;
+  margin: 15px 0;
+}
+
+.followers {
+  margin: 20px 0;
+  font-size: 17px;
+}
+
+#sideprofile-file .rest div {
+  margin-bottom: 5px;
+  font-size: 17px;
 }
 
 .octi-line {
@@ -373,24 +510,6 @@ input {
   display: inline;
 }
 
-/* .github-nav img {
-  height: 40px;
-  width: 40px;
-  float: left;
-  clear: both;
-  margin-right: 15px;
-}
-
-.github-nav p {
-  display: block;
-  overflow: auto;
-  font-size: 18px;
-  font-weight: 600;
-  padding-top: 9px;
-  width: fit-content;
-  cursor: pointer;
-} */
-
 .github-nav a:link, .github-nav a:visited {
   text-decoration: none;
   color: black;
@@ -406,7 +525,7 @@ input {
   margin-right: 30px;
   font-size: 18px;
   cursor: pointer;
-  padding: 5px 10px 0 10px;
+  padding: 5px 10px;
 }
 
 .repos-nav a:hover {
@@ -422,8 +541,8 @@ input {
   content: "";
   display: block;
   border-bottom: 3px solid orange;
-  padding-bottom: 20px;
-  margin-bottom: -20px;
+  padding-bottom: 25px;
+  margin-bottom: -25px;
   margin-left: -10%;
   width: 120%;
   z-index: 1;
