--- a/src/App.css
+++ b/src/App.css
@@ -215,7 +215,6 @@ input {
   vertical-align: middle;
   border: 1px solid #656D76;
   border-radius: 6px;
-  /* width: 75%; */
 }
 
 .github-nav img, .home-header img, .listed-user img {
@@ -262,7 +261,6 @@ input {
 #home-file .home-body form {
   width: fit-content;
   text-align: center;
-  /* align-items: center; */
   margin: auto;
 }
 
@@ -273,12 +271,12 @@ input {
   width: 100px;
   font-size: 14px;
   background-color: #F6F8FA;
+  cursor: pointer;
 }
 
 #home-file .listed-user {
   margin: 40px auto;
   display: grid;
-  /* grid-template-columns: 1fr 8fr; */
   border: 1px solid #656D76;
   padding: 16px;
   border-radius: 6px;
