Final styling - all set

--- a/src/App.css
+++ b/src/App.css
@@ -595,7 +595,7 @@ input {
   margin-left: 8px;
   background-color: #e0e5e9;
   border-radius: 2rem;
-  padding: 3px 9px;
-  font-size: medium;
+  padding: 5px 9px;
+  font-size: 12px;
   font-weight: normal;
 }
